--- a/app_pagos/src/app/components/navbar/navbar.component.html
+++ b/app_pagos/src/app/components/navbar/navbar.component.html
@@ -92,7 +92,7 @@
           <a routerLink="/info-servicio"
             class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Services</a>
         </li>
-        <li *ngIf="isLoggedIn;">
+        <li *ngIf="isLoggedIn && isCliente">
           <a routerLink="/retiros"
             class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Retiros</a>
         </li>
