Add image support to transaction data and update payment template

--- a/api_pagos/src/templates/transaction-template.html
+++ b/api_pagos/src/templates/transaction-template.html
@@ -26,6 +26,11 @@
             margin-bottom: 20px;
         }
 
+        .header img {
+            max-width: 150px;
+            margin-bottom: 10px;
+        }
+
         .header h1 {
             color: #5a5a5a;
         }
@@ -58,6 +63,7 @@
 <body>
     <div class="container">
         <div class="header">
+            <img src="{{image}}" alt="Logo de {{storeName}}">
             <h1>Comprobante de Transacción</h1>
             <h2>{{storeName}}</h2>
         </div>
